# solarants

./: .gitignore  best_params.npy  demo_viewer.py  eda_viewer.py  evo.py  evolve_linear_policy.py  pyproject.toml  run_evo.py  setup.py  solar_ants_env.py  solar_gym_env.py  test2.py  viewer.py
eda_runs/: best_params.npy  best_params_20251224_101105.npy  best_params_fullcov_20251224_101936.npy  log_20251224_101105.jsonl  log_fullcov_20251224_101936.jsonl
evo/: evo.py  genomeDataset.py  solar_ants_env.py  task.py
include/: Agent.h  Body.h  Celestial.h  Collisions.h  Resource.h  System.h  Vec2.h  bindings.h
results/: best_genome_gen_000.npy  best_genome_gen_002.npy  best_genome_gen_003.npy
src/: Agent.cpp  Body.cpp  Celestial.cpp  Resource.cpp  System.cpp  bindings.cpp
